--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "watchify index.js -o dist.js -s run -d -v"
+    "dev": "watchify index.js -o dist.js -s noise -d -v"
   },
   "dependencies": {
     "binary-to-string": "^0.1.0",
