--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "binary-to-string": "^0.1.0",
+    "lodash": "^3.6.0",
     "string-to-binary": "^0.1.0"
   },
   "devDependencies": {
